# RFWhisper

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: basic-ci.yml  deploy-docs.yml
rfwhisper/: __init__.py  cli.py
rfwhisper/dsp/: __init__.py  features.py  resample.py
tests/dsp/: test_features.py  test_resample.py
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: code-of-conduct.mdx  contributing.mdx  faq.md  intro.md  roadmap.mdx  why-rfwhisper.md
website/docs/architecture/: flowgraphs.md  index.md  latency-budget.md  signal-flow.md
website/docs/hardware/: index.md  rigs.md  sdrs.md  virtual-cables.md
website/docs/installation/: index.md  linux.md  macos.md  raspberry-pi.md  windows.md
website/docs/models/: fine-tuning.md  index.md  model-cards.md  training.md
website/docs/quickstart/: index.md  v0_1-test-guide.md
website/docs/use-cases/: contesting.md  pota.md  weak-signal.md
website/scripts/: extract-api-docs.mjs  grc-to-mermaid.mjs  sync-all.mjs  sync-misc.mjs  sync-readme.mjs  sync-roadmap.mjs
website/scripts/lib/: fs-utils.mjs
website/src/components/FlowgraphRenderer/: index.tsx
website/src/components/landing/: DocStrip.tsx  HomepagePillars.tsx  SpectrumPanel.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
website/static/: CNAME
